--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,8 @@
     "build": "next build",
     "dev": "next dev",
     "debug": "NODE_OPTIONS='--inspect' next dev",
-    "format": "prettier --write '**/*.{js,json,md,mdx,ts,tsx,scss,yaml,yml}'",
-    "format-check": "prettier --check '**/*.{js,json,md,mdx,ts,tsx,scss,yaml,yml}'",
+    "format": "prettier --write '**/*.{js,json,md,ts,tsx,scss,yaml,yml}'",
+    "format-check": "prettier --check '**/*.{js,json,md,ts,tsx,scss,yaml,yml}'",
     "lint": "next lint --dir src --dir stories --dir .storybook --dir tests --dir scripts --dir frontend --dir lib --dir types",
     "lint-fix": "npm run lint -- --fix",
     "postinstall": "node ./scripts/postinstall.js",
@@ -46,12 +46,13 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.9.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.0.2",
     "@playwright/test": "^1.44.0",
-    "@storybook/addon-designs": "^7.0.1",
-    "@storybook/addon-essentials": "^7.1.0",
-    "@storybook/nextjs": "^7.1.0",
-    "@storybook/react": "^7.1.0",
+    "@storybook/addon-designs": "^8.0.3",
+    "@storybook/addon-essentials": "^8.3.5",
+    "@storybook/nextjs": "^8.3.5",
+    "@storybook/react": "^8.3.5",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^16.0.0",
@@ -84,8 +85,8 @@
     "prettier": "^3.2.5",
     "sass": "^1.59.3",
     "sass-loader": "^13.2.0",
-    "storybook": "^7.1.0",
-    "storybook-react-i18next": "^2.0.6",
+    "storybook": "^8.3.5",
+    "storybook-react-i18next": "^3.1.7",
     "style-loader": "^3.3.2",
     "typescript": "^5.0.0"
   }
