add day_js and use it format date/time

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@trussworks/react-uswds": "^9.1.0",
     "@uswds/uswds": "^3.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "focus-trap-react": "^10.2.3",
     "isomorphic-dompurify": "^2.15.0",
     "js-cookie": "^3.0.5",
