--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,7 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/jest-axe": "^3.5.5",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20.8.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
