--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,6 +61,7 @@
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.13",
     "@types/node": "^20.8.2",
+    "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
