[Issue 2482] Migrate delivery metrics transform and load from simpler-grants-sandbox (#2617)
## Summary
Adds new CLI capabilities to (1) initialize ETL database and (2)
transform and load into the ETL database

Fixes #2482

### Time to review: __10 mins__

## Changes proposed
> What was added, updated, or removed in this PR.
- Creates new dataset `etl_dataset` that can be hydrated from json 
- Adds new entry point to CLI: `poetry run analytics etl` 
- Exposes new commands `initialize_database` and `transform_and_load` 
- Creates new subpackage `integrations/etldb` to encapsulate transform
and load logic
- Ported `create table` sql from sandbox repo, updated to be
Postgres-friendly

TODO
- [x] DB integration - connect to Postgres
- [x] Finish `initialize_database` 
- [x] Port insert/update/select sql from sandbox repo, update it to be
Postgres-friendly
- [x] Finish `transform_and_load`
- [x] Fix linter issues
- [x] Write documentation
- [x] Write tests

## Context for reviewers
> Testing instructions, background context, more in-depth details of the
implementation, and anything else you'd like to call out or ask
reviewers. Explain how the changes were verified.
1. To initialize ETL database: `poetry run analytics etl
initialize_database`
2. To transform and load into ETL database: `poetry run analytics etl
transform_and_load --deliverable-file ./data/test-etl-01.json
--effective-date 2024-10-21`

## Additional information
> Screenshots, GIF demos, code examples or output to help show the
changes working as expected.

---------

Co-authored-by: widal001 <billy.daly@agile6.com>

--- a/analytics/Makefile
+++ b/analytics/Makefile
@@ -12,12 +12,13 @@ PROJECT_CONFIG_FILE ?= $(CONFIG_DIR)/github-projects.json
 ISSUE_FILE ?= $(OUTPUT_DIR)/delivery-data.json
 SPRINT ?= @current
 # Names of the points and sprint fields in the GitHub project
-POINTS_FIELD ?= Points
+POINTS_FIELD ?= Story Points
 SPRINT_FIELD ?= Sprint
 UNIT ?= points
 ACTION ?= show-results
 MIN_TEST_COVERAGE ?= 80
 APP_NAME ?= grants-analytics
+EFFECTIVE_DATE ?= $(shell date +"%Y-%m-%d")
 
 # Required for CI to work properly
 SHELL = /bin/bash -o pipefail
@@ -142,6 +143,20 @@ lint: ## runs code quality checks
 #################
 # Data Commands #
 #################
+
+init-db:
+	@echo "=> Initializing the database schema"
+	@echo "====================================================="
+	$(POETRY) analytics etl initialize_database
+	@echo "====================================================="
+
+gh-transform-and-load:
+	@echo "=> Transforming and loading GitHub data into the database"
+	@echo "====================================================="
+	$(POETRY) analytics etl transform_and_load \
+	--deliverable-file $(DELIVERY_FILE) \
+	--effective-date $(EFFECTIVE_DATE)
+	@echo "====================================================="
 
 gh-db-data-import:
 	@echo "=> Importing sprint data to the database"
