Add workflow to allow this to be run directly

--- a/.github/workflows/cd-api-infra.yml
+++ b/.github/workflows/cd-api-infra.yml
@@ -9,6 +9,17 @@ on:
       - "infra/api/**"
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: "target environment"
+        required: true
+        default: "dev"
+        type: choice
+        options:
+          - dev
+          - staging
+          - prod
 
 jobs:
   build-repository:
