--- a/.github/workflows/cd-analytics.yml
+++ b/.github/workflows/cd-analytics.yml
@@ -33,6 +33,7 @@ jobs:
     uses: ./.github/workflows/deploy.yml
     strategy:
       max-parallel: 1
+      fail-fast: false
       matrix:
         envs: ${{ github.event_name == 'release' && fromJSON('["prod"]') || github.ref_name == 'main' && fromJSON('["dev", "staging"]') || fromJSON('["dev"]') }}
     with:
