--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -14,7 +14,4 @@ SENDY_API_KEY=
 SENDY_API_URL=
 SENDY_LIST_ID=
 
-# API_URL=http://api.simpler.grants.gov
-
-API_URL=http://localhost:8080
-API_AUTH_TOKEN=LOCAL_AUTH_12345678
+API_URL=http://api.simpler.grants.gov
