--- a/.github/workflows/ci-frontend-a11y.yml
+++ b/.github/workflows/ci-frontend-a11y.yml
@@ -36,12 +36,6 @@ jobs:
       - name: Create screenshots directory
         run: mkdir -p screenshots-output
 
-      - name: Build project
-        run: npm run build
-
-      - name: Start server and log output
-        run: npm run start &
-
       - name: Start API Server for search results
         run: |
           cd ../api
@@ -52,17 +46,19 @@ jobs:
           ../api/bin/wait-for-api.sh
         shell: bash
 
+      - name: Build Site
+        run: |
+          cat .env.development >> .env.local
+          npm run build
+
+      - name: Run Server
+        run:  npm run start &
+
       - name: Wait for frontend to be ready
         run: |
           # Ensure the server wait script is executable
           chmod +x ./bin/wait-for-frontend.sh
           ./bin/wait-for-frontend.sh
-
-      - name: Run curl
-        run: |
-          curl -I http://localhost:3000/opportunity/1
-          curl -I http://localhost:3000/opportunity/1231212
-          curl http://localhost:3000/search | grep "/opportunity/*"
 
       - name: Run pa11y-ci
         run: |
