--- a/.github/actionlint.yml
+++ b/.github/actionlint.yml
@@ -1,5 +1,5 @@
 paths:
   # actionlint doesn't know how to handle the json inside of this file
-  ci-cron-vulnerability-scans.yml:
+  .github/workflows/ci-cron-vulnerability-scans.yml:
     ignore:
       - "[.*]Quote this to prevent word splitting[.*]"
