--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -103,6 +103,20 @@ services:
       - grants_backend
       - default
 
+  mock-oauth2-server:
+    image: ghcr.io/navikt/mock-oauth2-server:2.1.10
+    ports:
+      - "5000:5000"
+    environment:
+      LOG_LEVEL: "debug"
+      SERVER_PORT: 5000
+    networks:
+      - grants_backend
+      - default
+    volumes:
+      - ./config.json:/app/config.json
+      - ./mock-server-key.json:/app/resources/mock-oauth2-server-keys.json
+
 volumes:
   grantsdbdata:
   opensearch-data:
