--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -106,16 +106,17 @@ services:
   mock-oauth2-server:
     image: ghcr.io/navikt/mock-oauth2-server:2.1.10
     ports:
-      - "5000:5000"
+      - "5001:5001"
     environment:
       LOG_LEVEL: "debug"
-      SERVER_PORT: 5000
+      SERVER_PORT: 5001
+      CLIENT_ID: "api"
     networks:
       - grants_backend
       - default
     volumes:
-      - ./config.json:/app/config.json
-      - ./mock-server-key.json:/app/resources/mock-oauth2-server-keys.json
+      - ./mock-oauth/config.json:/app/config.json
+      - ./mock-oauth/mock-server-key.json:/app/resources/mock-oauth2-server-keys.json
 
 volumes:
   grantsdbdata:
