--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -103,6 +103,21 @@ services:
       - grants_backend
       - default
 
+  mock-oauth2-server:
+    image: ghcr.io/navikt/mock-oauth2-server:2.1.10
+    ports:
+      - "5001:5001"
+    environment:
+      LOG_LEVEL: "debug"
+      SERVER_PORT: 5001
+      CLIENT_ID: "api"
+    networks:
+      - grants_backend
+      - default
+    volumes:
+      - ./mock-oauth/config.json:/app/config.json
+      - ./mock-oauth/mock-server-key.json:/app/resources/mock-oauth2-server-keys.json
+
 volumes:
   grantsdbdata:
   opensearch-data:
