--- a/api/local.env
+++ b/api/local.env
@@ -41,6 +41,11 @@ LOG_ENABLE_AUDIT=FALSE
 # The auth token used by the local endpoints
 API_AUTH_TOKEN=LOCAL_AUTH_12345678,LOCAL_AUTH_87654321,LOCAL_1234
 
+
+LOGIN_GOV_JWK_ENDPOINT=http://localhost:5000
+LOGIN_GOV_ENDPOINT=http://localhost:5000
+LOGIN_GOV_CLIENT_ID=TODO
+
 ############################
 # DB Environment Variables
 ############################
