Minor config update

--- a/api/local.env
+++ b/api/local.env
@@ -42,8 +42,8 @@ LOG_ENABLE_AUDIT=FALSE
 API_AUTH_TOKEN=LOCAL_AUTH_12345678,LOCAL_AUTH_87654321,LOCAL_1234
 
 
-LOGIN_GOV_JWK_ENDPOINT=http://localhost:5000
-LOGIN_GOV_ENDPOINT=http://localhost:5000
+LOGIN_GOV_JWK_ENDPOINT=http://localhost:5001
+LOGIN_GOV_ENDPOINT=http://localhost:5001/jwks
 LOGIN_GOV_CLIENT_ID=TODO
 
 ############################
