add schema to local.env

--- a/analytics/local.env
+++ b/analytics/local.env
@@ -12,6 +12,7 @@ DB_NAME=app
 DB_USER=app
 DB_PASSWORD=secret123
 DB_SSL_MODE=allow
+DB_SCHEMA=public
 
 # When an error occurs with a SQL query,
 # whether or not to hide the parameters which
