--- a/.trivyignore
+++ b/.trivyignore
@@ -7,3 +7,6 @@
 #  Issue:         Why there is a finding and why this is here or not been removed
 #  Last checked:  Date last checked in scans
 #The-CVE-or-vuln-id # Remove comment at start of line
+
+
+jwt-token
