--- a/.github/workflows/lint-set-points-and-sprint.yml
+++ b/.github/workflows/lint-set-points-and-sprint.yml
@@ -13,6 +13,10 @@ jobs:
   run-project-linters:
     name: Run set points and sprint values on close
     runs-on: ubuntu-latest
+    # Prevents duplicate runs of this linter for the same issue
+    concurrency:
+      group: issue-${{ github.event.issue.number }}
+      cancel-in-progress: true
     env:
       GH_TOKEN: ${{ secrets.GH_TOKEN_PROJECT_ACCESS }}
       ISSUE_URL: ${{ github.event.issue.html_url }}
