docs: Adds note to disable Slack-based sprint reporting

--- a/.github/workflows/ci-analytics.yml
+++ b/.github/workflows/ci-analytics.yml
@@ -1,3 +1,5 @@
+# NOTE(2024-11-15): This should be turned off once we fully migrate to Metabase
+# we're only running this temporarily as quality control for the new dashboard
 name: Analytics Checks
 
 on:
