--- a/.github/workflows/ci-analytics.yml
+++ b/.github/workflows/ci-analytics.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Run tests
         run: make test-audit
 
+      - name: Run database initialization
+        run: make init-db
+
       # Both of these tasks are looking for github and slack auth
       # - name: Export GitHub data
       #   run: make gh-data-export
