--- a/analytics/local.env
+++ b/analytics/local.env
@@ -39,3 +39,16 @@ MB_DB_HOST=grants-analytics-db
 # by doing `export ANALYTICS_REPORTING_CHANNEL_ID=whatever`
 ANALYTICS_REPORTING_CHANNEL_ID=DO_NOT_SET_HERE
 ANALYTICS_SLACK_BOT_TOKEN=DO_NOT_SET_HERE
+
+############################
+# Logging
+############################
+
+# Can be "human-readable" OR "json"
+LOG_FORMAT=human-readable
+
+# Set log level. Valid values are DEBUG, INFO, WARNING, CRITICAL
+# LOG_LEVEL=INFO
+
+# Change the message length for the human readable formatter
+# LOG_HUMAN_READABLE_FORMATTER__MESSAGE_WIDTH=50
