--- a/analytics/pyproject.toml
+++ b/analytics/pyproject.toml
@@ -34,6 +34,7 @@ pytest = "^8.0.0"
 pytest-cov = "^5.0.0"
 ruff = "^0.0.278"
 safety = "^3.0.0"
+types-requests = "^2.32.0.20241016"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
@@ -69,9 +70,15 @@ ignore = [
   "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
   "TD003",   # missing an issue link on TODO
   "T201",    # use of `print` detected
+  "PT004",   # pytest fixture leading underscore - is marked deprecated
 ]
 line-length = 100
 select = ["ALL"]
+
+[tool.ruff.flake8-builtins]
+# Don't complain about shadowing the builtin format function
+# Many builtin classes we extend use format as a function name
+builtins-ignorelist = ["format"]
 
 [tool.pytest.ini_options]
 filterwarnings = [
