blow away data, just to be sure

--- a/.github/workflows/ci-analytics.yml
+++ b/.github/workflows/ci-analytics.yml
@@ -43,7 +43,7 @@ jobs:
         run: make test-audit
 
       - name: Run database initialization
-        run: make init-db
+        run: docker compose down --volumes && make init-db
 
       # Both of these tasks are looking for github and slack auth
       # - name: Export GitHub data
