--- a/analytics/pyproject.toml
+++ b/analytics/pyproject.toml
@@ -51,6 +51,7 @@ disable = [
   "R0801", # duplicate-code
   "W0511", # fix-me
   "R0913", # too-many-arguments
+  "R0917", # too-many-positional-arguments
   "R0902", # too-many-instance-attributes
   "R0903", # too-few-public-methods
   "W1514", # unspecified-encoding
