sending data to nr

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -23,3 +23,9 @@ API_AUTH_TOKEN=LOCAL_AUTH_12345678
 # Boolean to switch between mock data and live API call data
 # Default is a live API call
 USE_SEARCH_MOCK_DATA=false
+
+# Credentials for DEV Next New Relic Account (see 1pass)
+# Best practice is to pass these in the command line when you start your dev server rather than entering them here
+# DO NOT COMMIT THESE VALUES TO GITHUB
+NEW_RELIC_APP_NAME=
+NEW_RELIC_LICENSE_KEY=
