--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,14 @@
     "all-checks": "npm run test && npm run lint && npm run ts:check && npm run build",
     "build": "next build",
     "dev": "next dev",
+    "dev:nr": "NODE_OPTIONS='-r @newrelic/next' next dev",
     "debug": "NODE_OPTIONS='--inspect' next dev",
     "format": "prettier --write '**/*.{js,json,md,ts,tsx,scss,yaml,yml}'",
     "format-check": "prettier --check '**/*.{js,json,md,ts,tsx,scss,yaml,yml}'",
     "lint": "next lint --dir src --dir stories --dir .storybook --dir tests --dir scripts --dir frontend --dir lib --dir types",
     "lint-fix": "npm run lint -- --fix",
     "postinstall": "node ./scripts/postinstall.js",
-    "start": "next start -p ${PORT:-3000}",
+    "start": "NODE_OPTIONS= '-r @newrelic/next' next start -p ${PORT:-3000}",
     "storybook": "storybook dev -p 6006",
     "storybook-build": "storybook build",
     "test": "jest --ci --coverage",
@@ -28,6 +29,7 @@
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@newrelic/next": "^0.10.0",
     "@next/third-parties": "^14.3.0-canary.59",
     "@opentelemetry/api": "^1.8.0",
     "@trussworks/react-uswds": "^9.1.0",
@@ -38,6 +40,7 @@
     "isomorphic-dompurify": "^2.15.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "newrelic": "^12.7.0",
     "next": "^14.2.3",
     "next-intl": "^3.2.1",
     "react": "^18.2.0",
@@ -62,6 +65,7 @@
     "@types/jest-axe": "^3.5.5",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.13",
+    "@types/newrelic": "^9.14.6",
     "@types/node": "^20.8.2",
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.0.28",
