--- a/analytics/pyproject.toml
+++ b/analytics/pyproject.toml
@@ -34,6 +34,7 @@ pytest = "^8.0.0"
 pytest-cov = "^5.0.0"
 ruff = "^0.7.0"
 safety = "^3.0.0"
+types-requests = "^2.32.0.20241016"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
@@ -74,8 +75,14 @@ ignore = [
   "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
   "TD003",   # missing an issue link on TODO
   "T201",    # use of `print` detected
+  "PT004",   # pytest fixture leading underscore - is marked deprecated
   "FA102",   # Adding "from __future__ import annotations" to any new-style type annotation
 ]
+
+[tool.ruff.lint.flake8-builtins]
+# Don't complain about shadowing the builtin format function
+# Many builtin classes we extend use format as a function name
+builtins-ignorelist = ["format"]
 
 [tool.pytest.ini_options]
 filterwarnings = [
