Remove Max from documentation PRs

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 # We are limiting this to a few engineers and choosing not to select "Require review from Code Owners."
 * @acouch @chouinar @mdragon 
 
-/documentation/ @mxk0  @widal001 @andycochran @mdragon
+/documentation/ @widal001 @andycochran @mdragon
 /frontend/ @andycochran @acouch @doug-s-nava 
 /api/ @chouinar @mdragon
 /analytics/ @coilysiren @widal001 @acouch 
