run docker compose down before make init-db; changed sequence of jobs so tests run *after* db is initialized

--- a/.github/workflows/ci-analytics.yml
+++ b/.github/workflows/ci-analytics.yml
@@ -39,11 +39,11 @@ jobs:
       - name: Run linting
         run: make lint
 
+      - name: Run database initialization
+        run: docker compose down --volumes && make init-db
+
       - name: Run tests
         run: make test-audit
-
-      - name: Run database initialization
-        run: make init-db
 
       # Both of these tasks are looking for github and slack auth
       # - name: Export GitHub data
