--- a/api/local.env
+++ b/api/local.env
@@ -45,6 +45,7 @@ LOGIN_GOV_JWK_ENDPOINT=http://localhost:5001/issuer1/jwks
 LOGIN_GOV_ENDPOINT=http://localhost:5001
 LOGIN_GOV_CLIENT_ID=TODO
 
+ENABLE_AUTH_ENDPOINT=TRUE
 ############################
 # DB Environment Variables
 ############################
