--- a/.github/workflows/cd-metabase.yml
+++ b/.github/workflows/cd-metabase.yml
@@ -2,6 +2,12 @@ name: Deploy Metabase
 run-name: Deploy ${{ github.ref_name }} to Metabase ${{ inputs.environment || (github.event_name == 'release' && 'prod') || 'nonprod'}}
 
 on:
+  push:
+    branches:
+      - "mdragon/2938-metabase-workflow"
+    paths:
+      - ".github/workflows/cd-metabase.yml"
+      - "Makefile"
   workflow_dispatch:
     inputs:
       environment:
@@ -21,12 +27,12 @@ on:
 jobs:
   deploy:
     name: Deploy
-    uses: ./.github/workflows/deploy.yml
+    uses: ./.github/workflows/deploy-metabase.yml
     strategy:
       max-parallel: 1
       fail-fast: false
       matrix:
         envs: ${{ github.event_name == 'release' && fromJSON('["prod"]') || github.ref_name == 'main' && fromJSON('["dev", "staging"]') || fromJSON('["dev"]') }}
     with:
-      app_name: "analytics"
+      version: latest
       environment: ${{ matrix.envs }}
