--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -63,6 +63,7 @@ db-seed-local = "tests.lib.seed_local_db:seed_local_db"
 create-erds = "bin.create_erds:main"
 setup-postgres-db = "src.db.migrations.setup_local_postgres_db:setup_local_postgres_db"
 setup-localstack = "bin.setup_localstack:main"
+setup-env-override-file = "bin.setup_env_override_file:setup_env_override_file"
 
 [tool.black]
 line-length = 100
