--- a/api/.gitignore
+++ b/api/.gitignore
@@ -19,6 +19,7 @@ coverage.*
 # Environment variables
 .env
 .envrc
+override.env
 
 # mypy
 .mypy_cache
@@ -32,3 +33,8 @@ coverage.*
 
 # localstack
 /volume
+
+# All pem/pub/secret keys
+*.key
+*.pub
+*.pem
