--- a/.github/workflows/cd-analytics.yml
+++ b/.github/workflows/cd-analytics.yml
@@ -5,8 +5,10 @@ on:
   push:
     branches:
       - "main"
+      - "kai/analytics-migrations"
     paths:
       - "analytics/**"
+      - "Makefile"
   release:
     types: [published]
   workflow_dispatch:
