--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -26,3 +26,6 @@ API_AUTH_TOKEN=LOCAL_AUTH_12345678
 # Boolean to switch between mock data and live API call data
 # Default is a live API call
 USE_SEARCH_MOCK_DATA=false
+
+NEXT_GOOGLE_ANALYTICS_ID="G-GWJZD3DL8W"
+
