--- a/.github/workflows/cd-frontend.yml
+++ b/.github/workflows/cd-frontend.yml
@@ -44,3 +44,7 @@ jobs:
     with:
       app_name: "frontend"
       environment: ${{ matrix.envs }}
+
+  send-slack-notification:
+    if: failure()
+    uses: ./.github/workflows/send-slack-notification.yml
