--- a/.github/workflows/cd-api.yml
+++ b/.github/workflows/cd-api.yml
@@ -5,8 +5,10 @@ on:
   push:
     branches:
       - "main"
+      - "kai/alert-on-deploy-fail"
     paths:
       - "api/**"
+      - "Makefile"
   release:
     types: [published]
   workflow_dispatch:
