--- a/.github/workflows/cd-api.yml
+++ b/.github/workflows/cd-api.yml
@@ -49,4 +49,5 @@ jobs:
 
   send-slack-notification:
     if: failure()
+    needs: [api-checks, vulnerability-scans, deploy]
     uses: ./.github/workflows/send-slack-notification.yml
