pass through secrets

--- a/.github/workflows/cd-api-infra.yml
+++ b/.github/workflows/cd-api-infra.yml
@@ -80,3 +80,4 @@ jobs:
   send-slack-notification:
     if: failure()
     uses: ./.github/workflows/send-slack-notification.yml
+    secrets: inherit
