--- a/.github/workflows/cd-api.yml
+++ b/.github/workflows/cd-api.yml
@@ -51,3 +51,4 @@ jobs:
     if: failure()
     needs: [api-checks, vulnerability-scans, deploy]
     uses: ./.github/workflows/send-slack-notification.yml
+    secrets: inherit
