--- a/.github/workflows/cd-analytics-infra.yml
+++ b/.github/workflows/cd-analytics-infra.yml
@@ -70,3 +70,4 @@ jobs:
   send-slack-notification:
     if: failure()
     uses: ./.github/workflows/send-slack-notification.yml
+    secrets: inherit
