--- a/.github/workflows/cd-analytics.yml
+++ b/.github/workflows/cd-analytics.yml
@@ -49,3 +49,4 @@ jobs:
   send-slack-notification:
     if: failure()
     uses: ./.github/workflows/send-slack-notification.yml
+    secrets: inherit
