--- a/.github/workflows/cd-api-infra.yml
+++ b/.github/workflows/cd-api-infra.yml
@@ -79,5 +79,6 @@ jobs:
 
   send-slack-notification:
     if: failure()
+    needs: [build-repository, deploy-infra]
     uses: ./.github/workflows/send-slack-notification.yml
     secrets: inherit
