--- a/.github/workflows/cd-metabase.yml
+++ b/.github/workflows/cd-metabase.yml
@@ -33,5 +33,6 @@ jobs:
 
   send-slack-notification:
     if: failure()
+    needs: [deploy]
     uses: ./.github/workflows/send-slack-notification.yml
     secrets: inherit
