--- a/.github/workflows/cd-analytics.yml
+++ b/.github/workflows/cd-analytics.yml
@@ -48,5 +48,6 @@ jobs:
 
   send-slack-notification:
     if: failure()
+    needs: [analytics-checks, vulnerability-scans, deploy]
     uses: ./.github/workflows/send-slack-notification.yml
     secrets: inherit
