--- a/.github/workflows/cd-frontend.yml
+++ b/.github/workflows/cd-frontend.yml
@@ -47,5 +47,6 @@ jobs:
 
   send-slack-notification:
     if: failure()
+    needs: [frontend-checks, vulnerability-scans, deploy]
     uses: ./.github/workflows/send-slack-notification.yml
     secrets: inherit
