--- a/.github/workflows/cd-analytics.yml
+++ b/.github/workflows/cd-analytics.yml
@@ -45,3 +45,9 @@ jobs:
     with:
       app_name: "analytics"
       environment: ${{ matrix.envs }}
+
+  send-slack-notification:
+    if: failure()
+    needs: [analytics-checks, vulnerability-scans, deploy]
+    uses: ./.github/workflows/send-slack-notification.yml
+    secrets: inherit
