[Issue #2980] Fire off an alert when any deploy fails (#2981)
## Summary

Fixes #2980

### Time to review: __2 mins__

## Testing

<img width="531" alt="image"
src="https://github.com/user-attachments/assets/d914250a-f997-4e04-9931-5bcaf2bb7216">

(this was made easy by the fact that the API deploy is currently failing
due to anchore/grype scans)

--- a/.github/workflows/cd-api.yml
+++ b/.github/workflows/cd-api.yml
@@ -44,3 +44,9 @@ jobs:
     with:
       app_name: "api"
       environment: ${{ matrix.envs }}
+
+  send-slack-notification:
+    if: failure()
+    needs: [api-checks, vulnerability-scans, deploy]
+    uses: ./.github/workflows/send-slack-notification.yml
+    secrets: inherit
