--- a/.github/workflows/cd-frontend-infra.yml
+++ b/.github/workflows/cd-frontend-infra.yml
@@ -65,3 +65,9 @@ jobs:
           ./bin/terraform-init.sh infra/frontend/${{ matrix.directory }} ${{ matrix.envs }}
           export TF_CLI_ARGS="-input=false -auto-approve -var environment_name=${{ matrix.envs }}"
           ./bin/terraform-apply.sh infra/frontend/${{ matrix.directory }} ${{ matrix.envs }}
+
+  send-slack-notification:
+    if: failure()
+    needs: [build-repository, deploy-infra]
+    uses: ./.github/workflows/send-slack-notification.yml
+    secrets: inherit
