--- a/.github/workflows/cd-frontend.yml
+++ b/.github/workflows/cd-frontend.yml
@@ -44,3 +44,9 @@ jobs:
     with:
       app_name: "frontend"
       environment: ${{ matrix.envs }}
+
+  send-slack-notification:
+    if: failure()
+    needs: [frontend-checks, vulnerability-scans, deploy]
+    uses: ./.github/workflows/send-slack-notification.yml
+    secrets: inherit
