Ensure all "cd" workflows have workflow_dispatch and we honor the environment if we're in that path

--- a/.github/workflows/cd-api.yml
+++ b/.github/workflows/cd-api.yml
@@ -40,7 +40,7 @@ jobs:
       max-parallel: 1
       fail-fast: false
       matrix:
-        envs: ${{ inputs.environment || github.event_name == 'release' && fromJSON('["prod"]') || github.ref_name == 'main' && fromJSON('["dev", "staging"]') || fromJSON('["dev"]') }}
+        envs: ${{ fromJSON(inputs.environment != null && format('["{0}"]', inputs.environment) || github.event_name == 'release' && '["prod"]' || github.ref_name == 'main' && '["dev", "staging"]' || '["dev"]')  }}
     with:
       app_name: "api"
       environment: ${{ matrix.envs }}
