[Issue #1884] make artillery very aggressive (#2940)
## Summary

Relates to #1884

### Time to review: __2 mins__

## Changes proposed

Scales the artillery config up to "the site falls down" numbers, so that
we can see exactly what the failure cases are for our website.

Unless we are testing for DDOS protection, we should never need to test
artillery with higher numbers than this. These numbers are _**very**_
high.

## Context for reviewers

We tested this already in staging, and it does in fact break the site.
Or at least, it does with 4 people running it.

--- a/frontend/artillery-load-test.yml
+++ b/frontend/artillery-load-test.yml
@@ -5,17 +5,17 @@ config:
   http:
     timeout: 10
   phases:
-    - duration: 30
-      arrivalRate: 2
-      maxVusers: 50
+    - duration: 3000
+      arrivalRate: 10
+      maxVusers: 5000
       name: Warm up phase
-    - duration: 30
-      arrivalRate: 28
-      maxVusers: 250
+    - duration: 3000
+      arrivalRate: 100
+      maxVusers: 25000
       name: Ramp up load
-    - duration: 30
-      arrivalRate: 56
-      maxVusers: 1000
+    - duration: 3000
+      arrivalRate: 1000
+      maxVusers: 50000
       name: Spike phase
   environments:
     local:
@@ -34,7 +34,7 @@ config:
           name: Spike phase
     prod:
       target: https://simpler.grants.gov
-    staging:
+    stage:
       target: http://frontend-staging-1506108424.us-east-1.elb.amazonaws.com
     dev:
       target: http://frontend-dev-1739892538.us-east-1.elb.amazonaws.com
