Ignore 4 CVEs related to PG that we have a patched version installed for but are still flagging in the scan

--- a/.grype.yml
+++ b/.grype.yml
@@ -23,3 +23,9 @@ ignore:
   - vulnerability: CVE-2024-34158
   - vulnerability: CVE-2024-34156
   - vulnerability: CVE-2024-34155
+
+  # https://github.com/HHS/simpler-grants-gov/issues/3015
+  - vulnerability: CVE-2024-10979
+  - vulnerability: CVE-2024-10978
+  - vulnerability: CVE-2024-10976
+  - vulnerability: CVE-2024-10977
